--- a/titre/apiserver/views/titre-details.pug
+++ b/titre/apiserver/views/titre-details.pug
@@ -11,12 +11,13 @@ head
 .page
   h4.center Royaume du Maroc
   h4.center المملكة المغربية
-  .clearfix
   h4.center 
     img.resized(src='/static/images/logo.png' alt='')
   h6.center Agence Nationale de la Conservation Foncière du Cadastre et de la Cartographie
   h6.center الوكالة الوطنية للمحافظة العقارية و المسح العقاري و الخرائطية 
 
-  h3.center.mt-150 CERTIFICAT DE CONSERVATION DE TITRE FONCIER
-  
+  h3.center.mt-150.underline.mb-80 CERTIFICAT DE PROPORIETE
+
+  .mb-80 Le conservateur de la propriété foncière et des droits foncières de  soussigné, certifie que :
+    p.m-4 Le domaine nommé  
     
