--- a/titre/apiserver/views/alltitres.pug
+++ b/titre/apiserver/views/alltitres.pug
@@ -1,32 +1,29 @@
 doctype html
-head
-  style 
-    include public/css/style.css
-  meta(charset='UTF-8')
-  meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-
-  link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css')
-
-  link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css')
-
-  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
-
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+heaD
+  // Required meta tags
+  meta(charset='utf-8')
+  meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+  link(rel='preconnect' href='https://fonts.googleapis.com')
+  link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+  link(href='https://fonts.googleapis.com/css2?family=PT+Serif&display=swap' rel='stylesheet')
+  // Bootstrap CSS
+  link(rel='stylesheet' href='/static/css/bootstrap.min.css')
+  // Style
+  link(rel='stylesheet' href='/static/css/style.css')
 
   title BTITRE INDEX
-h2 TITRE FONCIERE
-h5 
-  a( href="/api/addtitre") AJOUTER UN NOUVEAU TITRE
+h4.center.mt-3.bold LISTE DES TRITRES EXISTANT
+  .center 
+    a.btn.btn-success( href="/api/addtitre") Nouveau Titre
 
 .table-wrapper
   table.fl-table
     thead
       tr
         th TITRE ID
-        th FULL NAME
+        th NOM ET PRENOM
         th CIN
-        th ADDRESS
+        th ADDRESSE
         th EMAIL
         th INDICE
         th CONSERVATION FONCIERE
@@ -44,5 +41,5 @@ h5
           td=item["Record"]["city_fonc"]
           td=item["Record"]["special_indice"]
           td
-            a(href="/api/query/" +item["Key"]) view details
-      
+            a.btn-custom(href="/api/query/" +item["Key"]) afficher
+
