--- a/titre/apiserver/views/public/css/A4.css
+++ b/titre/apiserver/views/public/css/A4.css
@@ -30,7 +30,7 @@ h6 {margin: 0;}
 /* Utility Classes */
 
 .center { text-align: center;}
-.mt-150 {margin-top: 150px}
+.mt-150 {margin-top: 120px}
 .resized {
   width: 110px;
   display: inline-block;
@@ -39,6 +39,7 @@ h6 {margin: 0;}
 .left { float: left; }
 .right{ float: right; }
 .clearfix {clear: both;}
+.underline{text-decoration: underline;}
 
 .page {
   display: inline-block;
