--- a/titre/apiserver/views/public/css/style.css
+++ b/titre/apiserver/views/public/css/style.css
@@ -1,48 +1,123 @@
-*{
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-body{
-  font-family: Helvetica;
-  -webkit-font-smoothing: antialiased;
-  background: rgba( 71, 147, 227, 1);
-}
-h2{
-  text-align: center;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: white;
-  font-weight: bolder;
-  padding: 10px 0;
+@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Playfair+Display&display=swap');
+
+body {
+  font-family: 'Playfair', sans-serif;
+  background-color: #e2e2e2;
+  line-height: 1.5;
+  color: #5e5c5c; }
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  color: #3f3c3c; }
+
+  h4 {
+  font-weight: 900;}
+
+a {
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease; }
+  a, a:hover {
+    text-decoration: none !important; }
+  
+    select {
+      word-wrap: normal;
+      height: 40px;
+      border-radius: 5px;
+      width: 100%;
+      background-color: inherit;
+      color: inherit;
+  }
+
+.text-black {
+  color: #000; }
+
+  .lead { font-size: inherit;  }
+.content {
+  padding: 0; }
+
+.center {text-align: center;}
+.left {float: left; }
+.right {float: right; }
+.clearfix { clear: both; }
+.heading {
+  font-size: 1.2rem;
+  font-weight: 900; 
 }
 
-h5 {
-  text-align: center;
+.form-control {
+  border: none;
+  background: #f3f3f3; }
+  .form-control:active, .form-control:focus {
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-color: #000;
+    background: #f3f3f3; }
+
+.form-control-file, .form-control-range {
+    display: inline-block;
+    width: inherit;
 }
 
-h5 a {
-  display: inline-block;
-  text-decoration: none;
-  color: #fff;
-  margin: auto;
-  text-transform: uppercase;
-  font-size: 12px;
-  background: #324960;
-  padding: 8px;
+
+.col-form-label {
+  color: #000; }
+
+.custom-select:active, .custom-select:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-color: #000; }
+
+.btn {
+  border: none;
+  border-radius: 4px; }
+  .btn.btn-primary {
+    background: #000;
+    color: #fff;
+    padding: 15px 20px; }
+  .btn:hover {
+    color: #fff; }
+  .btn:active, .btn:focus {
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+
+
+.btn-success {
+  background-color: #1b5d94;
+  border-radius: 0;
+}
+
+.btn-custom {color: #42587c;}
+
+a.btn-custom:hover{ 
+  text-decoration: underline !important;
+  color: #1b5d94;
   font-weight: 700;
 }
 
-h5 a:hover {
-  background-color: #384c61;
-  color: rgb(211, 207, 207);
-  text-decoration: none;
-  font-weight: 700;
+.btn-success:hover {background-color: #42587c;}
+
+.center {text-align: center;}
+
+.bordered { 
+  border: solid 1px #3f3c3c;
+  padding: 1.1rem; 
+
 }
+.box {
+  padding: 40px;
+  background: #fff;
+  -webkit-box-shadow: -30px 30px 0px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: -30px 30px 0px 0 rgba(0, 0, 0, 0.08); }
+  .box h3 {
+    font-size: 14px;
+    margin-bottom: 30px;
+    text-align: center; }
 
-
-/* Table Styles */
+    /* Table Styles */
 
 .table-wrapper{
   margin: 10px 70px 70px;
@@ -58,7 +133,8 @@ h5 a:hover {
   width: 100%;
   max-width: 100%;
   white-space: nowrap;
-  background-color: white;
+  color: #1f1e1e;
+  
 }
 
 .fl-table td, .fl-table th {
@@ -75,13 +151,13 @@ h5 a:hover {
 .fl-table thead th {
   color: #ffffff;
   border-right: 1px solid whitesmoke;
-  background:  #324960;
+  background:  #1b5d94;
 }
 
 
 .fl-table thead th:nth-child(odd) {
   color: #ffffff;
-  background: #324960;
+  background: #1b5d94;
 }
 
 .fl-table tr:nth-child(even) {
@@ -153,3 +229,4 @@ h5 a:hover {
       text-align: center;
   }
 }
+
